# jvma-natives-Linux-x86_64

./: CMakeLists.txt  README.md
HelperFunctions/: createVkResult.cpp  freeMemory.cpp  getEnumSetValue.cpp  getHandleValue.cpp  getVmaAllocationCreateInfo.cpp  getVmaAllocationCreateInfoCollection.cpp  getVmaAllocatorCreateInfo.cpp  getVmaDefragmentationInfo2.cpp  getVmaPoolCreateInfo.cpp  getVmaRecordSettings.cpp  populateVmaAllocationInfo.cpp  populateVmaDefragmentationStats.cpp  populateVmaPoolStats.cpp  populateVmaStatInfo.cpp  populateVmaStats.cpp  setHandleValue.cpp  slf4j.cpp
VMAFunctions/: vk_mem_alloc.cpp
VMAJNIFunctions/: vmaAllocateMemory.cpp  vmaAllocateMemoryForBuffer.cpp  vmaAllocateMemoryForImage.cpp  vmaAllocateMemoryPages.cpp  vmaBindBufferMemory.cpp  vmaBindImageMemory.cpp  vmaBuildStatsString.cpp  vmaCalculateStats.cpp  vmaCheckCorruption.cpp  vmaCheckPoolCorruption.cpp  vmaCreateAllocator.cpp  vmaCreateBuffer.cpp  vmaCreateImage.cpp  vmaCreateLostAllocation.cpp  vmaCreatePool.cpp  vmaDefragmentationBegin.cpp  vmaDefragmentationEnd.cpp  vmaDestroyAllocator.cpp  vmaDestroyBuffer.cpp  vmaDestroyImage.cpp  vmaDestroyPool.cpp  vmaFindMemoryTypeIndex.cpp  vmaFindMemoryTypeIndexForBufferInfo.cpp  vmaFindMemoryTypeIndexForImageInfo.cpp  vmaFlushAllocation.cpp  vmaFreeMemory.cpp  vmaFreeMemoryPages.cpp  vmaGetAllocationInfo.cpp  vmaGetMemoryProperties.cpp  vmaGetMemoryTypeProperties.cpp  vmaGetPhysicalDeviceProperties.cpp  vmaGetPoolStats.cpp  vmaInvalidateAllocation.cpp  vmaMakePoolAllocationsLost.cpp  vmaMapMemory.cpp  vmaResizeAllocation.cpp  vmaSetCurrentFrameIndex.cpp  vmaTouchAllocation.cpp  vmaUnmapMemory.cpp
headers/: HelperFunctions.hh  JVmaHelperFunctions.hh  JVulkanHelperFunctions.hh  com_CIMthetics_jvma_NativeProxies.h  vk_mem_alloc.h
